# diceGame

./: .editorconfig  .gitattributes  .gitignore  README.rst  Vagrantfile  pyproject.toml
backend/: .my.cnf  MANIFEST.in  initdb.sql  manage.py  pyproject.toml
backend/digidice/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
backend/game/: fields.py  serializers.py  urls.py  views.py
backend/users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/users/migrations/: 0001_initial.py
config/: apache2.conf  uwsgi.service  uwsgi.xml
digidice/: settings.py  urls.py  wsgi.py
frontend/: footer.html  functions.js  game.js  index.html  login.html  login.js  modal.js  play-dice.html  register.html  register.js  result.html  styles.css  theme.js
